fixed scroll behaviour on mobile devices

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,8 +7,8 @@ body {
 }
 
 #root {
-  overflow-y: auto;
-  overflow-x: hidden;
+  //overflow-y: auto;
+  //overflow-x: hidden;
   max-width: 100%;
 }
 
