--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -19,7 +19,7 @@
     right: 0;
     bottom: 0;
 
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     pointer-events: none;
